<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Droid Cafe</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_intro">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered donut </string>
    <string name="ice_cream_order_message">You ordered ice cream sandwich </string>
    <string name="froyo_order_message">You ordered FroYo </string>


    <string name="order_label_text"></string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Isi nama lengkap</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Isi alamat sekarang</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Isi dengan nomor telepon</string>
    <string name="same_day_messenger_service">Sameday</string>
    <string name="next_day_ground_delivery">Next Day</string>
    <string name="pick_up" >Pickup</string>
    <string name="choose_delivery_method">Choose delivery method</string>
    <string name="choose_city">Choose City</string>
    <string name="your_order">Your Order</string>
    <string name="donut_order">Donut: </string>
    <string name="ice_cream_order">Ice Cream: </string>
    <string name="froyo_order">Froyo: </string>
    <string name="form_note">Note</string>
    <string name="enter_form_note_hint">Isi catatan (opsional)</string>
    <string name="no_order_message">You haven\'t ordered anything yet.</string>

</resources>